# ExperimentalCVLab

./: .gitignore  gradle.properties  log.txt  settings.gradle.kts  新建 文本文档 (4).txt
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ai/: OrtDetector.cpp  YoloDetector.cpp  YoloDetector.h  ai.cpp  ai.h  yolo_result.h
app/src/main/cpp/ai/engine/: DNNEngine.cpp  DNNEngine.h  OrtEngine.cpp  OrtEngine.h  engine.cpp  engine.h
app/src/main/cpp/filters/: filters.cpp  filters.h
app/src/main/cpp/jni/: jni_ai.cpp  jni_filters.cpp  jni_image_utils.cpp
app/src/main/cpp/utils/: NativeCamera.cpp  NativeCamera.h  utils.cpp  utils.h
app/src/main/cpp/utils/converter/: pnnx_converter.cpp  pnnx_converter.h
app/src/main/java/com/example/beautyapp/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/example/beautyapp/ui/: CameraScreen.kt  HomeScreen.kt  ModelManagementScreen.kt  ResolutionScreen.kt  SettingsScreen.kt  YoloObjectListScreen.kt
app/src/main/java/com/example/beautyapp/ui/camera/: CameraView.kt
app/src/main/java/com/example/beautyapp/util/: ImageExtensions.kt  ModelManager.kt
app/src/main/java/com/example/beautyapp/viewmodel/: BeautyViewModel.kt
app/src/main/java/com/mirror2922/ecvl/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/mirror2922/ecvl/ui/: CameraScreen.kt  HomeScreen.kt  ModelManagementScreen.kt  ResolutionScreen.kt  SettingsScreen.kt  YoloObjectListScreen.kt
app/src/main/java/com/mirror2922/ecvl/ui/camera/: CameraOverlay.kt  CameraView.kt
app/src/main/java/com/mirror2922/ecvl/ui/components/: AppHud.kt  CommonUi.kt  CompactHud.kt  FilterPanel.kt
app/src/main/java/com/mirror2922/ecvl/util/: HardwareMonitor.kt  ImageExtensions.kt  ModelManager.kt
app/src/main/java/com/mirror2922/ecvl/viewmodel/: BeautyViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
